added option for build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
       "target": "es5",
       "noImplicitAny": false,
       "outDir": "built",
+      "allowSyntheticDefaultImports":true,
       "module": "commonjs",
     },
     "include": [
